# ecore.rs

./: Cargo.toml  README.md
examples/: factory_demo.rs  test_parser.rs
rsc/: AbstractEcore.ecore  ExampleEcore.ecore
src/: ctx.rs  lib.rs  naive.rs  parser.rs  prelude.rs  repr.rs  traits.rs
src/parser/: cooked.rs  raw.rs
src/prelude/: res.rs
src/repr/: bounds.rs  builtin.rs  idx.rs  structural.rs
