# TODO: license

[package]
name = "ecore_rs"
version = "0.1.0"
authors = ["Red Iron Team <red-iron@ocamlpro.com>"]
edition = "2021"
description = "A parser for the Eclipse Modeling Framework Ecore format."
readme = "README.md"
license = "LGPL-3.0-or-later"
keywords = ["ecore", "eclipse", "EMF"]
categories = ["encoding", "parser-implementations",]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
regex = "1.6"
anyhow = "1.0.65"
safe_index = "0.9"
smallvec = "1.10"
# xmlparser = { git = 'https://github.com/RazrFalcon/xmlparser', rev="7334c08aabd21463507a77a288924ea8587865e4"}

[dev-dependencies]
simple_logger = "2.3"
